started footer build

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             
         </div>
     </header>
+
+
+    <footer>
+
+        
+    </footer>
 </main>
 
     <script type="module" src="js/main.js"></script>
