--- a/index.html
+++ b/index.html
@@ -41,9 +41,23 @@
     </header>
 
 
+    
     <footer>
+    <h2 class="hidden">Footer</h2>
+        <div id="footerCon">
 
-        
+            <div class="logoConFooter">
+                <img id="footerLogo" src="images/logo.svg" alt="Roku Logo">
+            </div>
+
+            <div id="socialMediaCon">
+                <img src="images/icon-facebook.svg" class="socialIcon" alt="Facebook Icon">
+                <img src="images/icon-twitter.svg" class="socialIcon" alt="Twitter Icon">
+                <img src="images/icon-youtube.svg" class="socialIcon" alt="Youtube Icon">
+            </div>
+
+            <h3 id="copyRight">© Copyright 2020 Roku, Inc.</h3>
+        </div> 
     </footer>
 </main>
 
