added adults profile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </nav>
 
             <div id="userCon" v-if="authenticated">
-                <img src="images/log-in-out.svg" alt="Log Button" id="logButton">
+                <img src="images/log-in-out.svg" alt="Log Button" id="logButton" @click="logout">
             </div>
         
             
