--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link  href="css/reset.css" rel="stylesheet" type="text/css">
     <link  href="css/main.css"  rel="stylesheet" type="text/css">
 
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.0.0/vue-router.js" ></script>
+
+
 </head>
 <body>
     <h1 class="hidden">Roku Video Streaming App</h1>
